--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   web:
     build: .
-    command: fastapi dev app/main.py --host 0.0.0.0 --port 8000
+    command: uv run fastapi dev app/main.py --host 0.0.0.0 --port 8000
     volumes:
       - .:/app
     ports:
@@ -16,7 +16,7 @@ services:
 
   celery:
     build: .
-    command: celery -A app.celery_worker worker --loglevel=info
+    command: uv run celery -A app.celery_worker worker --loglevel=info
     volumes:
       - .:/app
     env_file:
